# opengl-template

./: .gitignore  CMakeLists.txt  MakeFile  README.md  configure.bat  main.cpp  readme.md  run.bat  run.sh
game/: CMakeLists.txt
game/src/: add.cpp  game.cpp
game/src/include/: add.h  game.hpp
include/glad/: glad.h
main/: CMakeLists.txt  main.cpp
res/shaders/: basic.shader
src/: CMakeLists.txt  display.cpp  glad.c  main.cpp  mesh.cpp  shader.cpp  texture.cpp  window.cpp
src/include/: display.hpp  mesh.hpp  shader.hpp  texture.hpp  window.hpp
src/shaders/: basic.shader  shader.fs
